remove unnecessary dependencies